PR26198 MinGW failure to link regular object file and LTO object file

PR 26198
	* coffgen.c (_bfd_coff_section_already_linked): Allow for plugin
	objects both before and after normal object files.
	* elflink.c (_bfd_elf_section_already_linked): Likewise.